# kivo

./: README.md
backend/kivo-backend/: Cargo.toml  Dockerfile  railway.toml
backend/kivo-backend/.sqlx/: query-050eecf292d4e6c32e76d8ad46adc94657763943848cae9ab9c4330be8620703.json  query-28de1540c12fd199a389c73717753a1b6375bc53da1e78e6ed5fffca7aea8063.json  query-294a6ba717aa9a622b039d41b2fb7d1415cca1c6ef680b3be553bc7ba5660951.json  query-2bf5c615cae298d802e550f256d49c31ff51bde2b3bf3063f57948cb197e5137.json  query-35b72c2be434c90dec96dec3c0bec63cb18d3a31f5782365dd74aadacb13ee5a.json  query-38234cb8514b08789df00b0dce70bfe45e6b1fd50c46d28ed72daf58ed942287.json  query-3c1473cf71cea25e519f48f4cbca6cc100c15664bf6bfd8a41c522d239efa6f5.json  query-4f84a36830f6120c7c66d5e2a5dd0cc68066a815a27c0c2649da211b6064ef87.json  query-65cc960c027c065c1cb12f5f87755d73f36cf566051a9c2c4b8a2fab7579046b.json  query-8185b901bd607ba0444f14c61c9ca3933364ebb6ae6ff411ecf066bc43063aa4.json  query-9398acef3e82fee75ca434ff16f93cf3a414c958baddc8bf165d5ea924b88190.json  query-95c7c1b273e997712683fd2952b8f414b670d08e54083dc329b01f96ee2faecd.json  query-9f066cc72b50ec4473e39a4caeafddd7846ab3c87637814b3d2cfdfa4b095d7b.json  query-a17dddd73aa28b012158346b206e354e02d477ab308be1fb123781e482452c81.json  query-a403b422f4473bb18774672678243101434cf6295770b17ca2a883d70e938c21.json  query-a58e482facef8f1902e7b8d95b240d0961172131154ab24de453927b327d4b46.json  query-bd7785a88bbca7a3b7d548766b74d26980dace31329501df4ccdb85f935ae7c1.json  query-c3e806709decc4f0f456535a904cc42e84a582bb2acb8b6378d4565589a160da.json  (+4 more)
(+77 files in other folders)
